Actualización de diseño

--- a/estilos/estilosForms.css
+++ b/estilos/estilosForms.css
@@ -14,6 +14,45 @@ body{
     
 }
 
+.header {
+    animation: slideInHeader 1s forwards;
+    
+}
+
+.container-menu {
+    animation: slideDownMenu 1s forwards;
+    
+}
+@keyframes slideInHeader {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideDownMenu {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideDownContent {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+
+.anclaDis:hover .label {
+    opacity: 1;
+}
 h6{
     font-size: 15px;
     color: rgba(255, 255, 255, 0.76);
