--- a/estilos/estilosDispositivos.css
+++ b/estilos/estilosDispositivos.css
@@ -10,27 +10,36 @@ body {
 }
 
 .headerTabla {
-    backdrop-filter: blur(10px);
-    margin-left: 10%;
-    box-shadow: 20px 18px 26px rgba(0, 0, 0, 0.1);
-    margin-top: 100px;
-    font-size: 24px;
-    border-radius: 15px;
-    padding: 5px;
-    text-align: center;
-    width: 80%;
-    max-width: 900px;
-    margin: 50px auto;
-    position: relative;
+        background-color: #ffffff77;
+        backdrop-filter: blur(10px);
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        margin-left: 10%;
+        box-shadow: 20px 18px 26px rgba(0, 0, 0, 0.322);
+        margin-top: 100px;
+        font-size: 36px; /* Ajusta el tamaño del texto según tu preferencia */
+        border-radius: 15px; /* Ajusta el radio del borde según tu preferencia */
+        padding: 15px; /* Ajusta el espacio interno según tu preferencia */
+        text-align: center;
+        width: 80%;
+        max-width: 900px;
+        margin: 50px auto;
+        position: relative;
+        height: 100px;
+    }
+
+    .headerTabla h1 {
+        font-size: 60px; /* Ajusta el tamaño del texto según tu preferencia */
+        color: #333;
+    }
+
+/* Agrega estos estilos para animar la entrada del elemento */
+.headerTabla.show {
+    opacity: 1;
+    transform: translateX(0);
 }
 
-.headerTabla{
-    height: 100px;
-}
-
-.headerTabla h1{
-color: #333;
-}
 
 .form-inline {
     display: flex;
@@ -38,9 +47,9 @@ color: #333;
 }
 
 #IMGlaptop{
-    width: 300px;
-    height: 300px;
-    margin-left: 150px;
+    width: 680px;
+    height: 350px;
+    margin-left: 100px;
 }
 
 .input-group {
@@ -68,6 +77,9 @@ color: #333;
     color: black !important;
     background-color: #f9f9f9 !important;
 }
+
+
+
 
 .table tbody tr:hover {
     background: none !important;
@@ -143,4 +155,24 @@ color: #333;
     
 }
 
+.custom-button {
+    display: inline-block;
+    padding: 15px 30px;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    background-color: #000000; /* Color azul */
+    color: #fff;
+    border: 2px solid #3498db; /* Borde del mismo color que el fondo */
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+.custom-button:hover {
+    background-color: #2980b9; /* Color azul más oscuro al pasar el ratón */
+    color: #fff;
+    border-color: #2980b9; /* Borde más oscuro al pasar el ratón */
+}
 
