--- a/estilos/estilosNewUser.css
+++ b/estilos/estilosNewUser.css
@@ -19,6 +19,45 @@ body{
 }
 
 
+.header {
+    animation: slideInHeader 1s forwards;
+    
+}
+
+.container-menu {
+    animation: slideDownMenu 1s forwards;
+    
+}
+@keyframes slideInHeader {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideDownMenu {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideDownContent {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+
+.anclaDis:hover .label {
+    opacity: 1;
+}
 
 
 #imgNewUser{
