--- a/estilos/estilosDispositivos.css
+++ b/estilos/estilosDispositivos.css
@@ -31,7 +31,7 @@ body {
 
     .headerTabla h1 {
         font-size: 60px; /* Ajusta el tamaño del texto según tu preferencia */
-        color: #333;
+        color: #ffffff;
     }
 
 /* Agrega estos estilos para animar la entrada del elemento */
@@ -70,7 +70,7 @@ body {
 
 .thead-dark {
     background-color: #333 !important;
-    color: #fff !important;
+    color: #3fa9ff !important;
 } 
 
 .table tbody tr:nth-child(even) {
