--- a/estilos/estilosUsuarios.css
+++ b/estilos/estilosUsuarios.css
@@ -10,6 +10,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.839);
@@ -21,13 +22,18 @@
 background-color: #333;    
 padding: 20px;
     height: 200px;
-
+    display: flex !important;
     border-radius: 5px;
     max-width: 600px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     color: #fff;
 }
+
+.bon{
+    display: flex;
+}
+
 #btnCerrarModal{
     cursor: pointer;
     height: 50px;
