Funcionamiento de login y administracion de usuarios impecable(solo falta perfil)

--- a/estilos/estilosLogin.css
+++ b/estilos/estilosLogin.css
@@ -1,153 +1,7 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: linear-gradient(0deg, rgba(20,173,255,0.6168592436974789) 10%, rgba(20,173,255,1) 100%);}
-.gen{
-    margin-left: 25%;
-    margin-top: 5%;
-}
-footer{
-    margin-top: 50px;
-    
+body{
+    background: none;
+    background-image: url(../images/perro2.jpg);
+    background-size: contain;
+    backdrop-filter: blur(3px);
 }
 
-#IMGlogo{
-    margin-left: 70%;
-    width: 250px;
-    height: 100px;
-}
-
-.login-container {
-    width: 900px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 200px rgba(0, 0, 0, 0.5);
-    display: flex;
-    height: 500px;
-    align-items: center;
-    text-align: center;
-}
-
-.login-image {
-    width: 50%;
-    
-    display: flex;
-    flex-direction: column;
- 
-}
-
-#texto{
-    color: #00000099;
-}
-#correo{
-    width: 380px;
-    height: 30px;
-    
-    border-radius: 10px;
-    border-color: #007bff;
-    border-style:groove;
-    border: 2px solid transparent;
-    border-radius: 5px;
-    background-color: rgba(190, 190, 190, 0.686);
-    padding: 10px;
-    outline: none; /* Elimina el borde predeterminado de enfoque */
-    transition: border-color 0.3s, box-shadow 0.3s, transform 0.3s;
-}
-
-
-#correo:focus {
-    border-color:#007bff; /* Color del borde neón azul */
-    box-shadow: 0 0 10px #007bff; /* Efecto de resplandor al enfocar */
-    transform: scale(1.03); /* Efecto de escala al enfocar */
-}
-
-#correo:hover {
-    transform: scale(1.02); /* Efecto de escala al hacer hover */
-}
-.login-form {
-    width: 50%;
-    padding: 20px;
-}
-#imgPERRlogin{
-    width:450px;
-    height: 500px;
-    border-radius: 10px;
-}
-.login-form h2 {
-    margin-bottom: 20px;
-}
-
-.login-form label {
-    display: block;
-    margin-bottom: 10px;
-}
-
-.login-form input[type="text"],
-.login-form input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-.checkbox-label {
-    display: inline-block;
-    margin-right: 10px; /* Ajusta el margen según lo necesites */
-}
-.login-form button {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 30px;
-    width: 400px;
-}
-.login-form button:hover{
-    border-color:#007bff; /* Color del borde neón azul */
-    box-shadow: 0 0 10px #007bff; /* Efecto de resplandor al enfocar */
-    transform: scale(1.03); /
-}
-#formLogin{
-    margin-top: 50px;
-}
-#contrasena{
-    width: 380px;  
-}
-#usuario{
-    margin-left: 0px;
-    width: 380px;
-    
-}
-#imgLogo{
-    width: 350px;
-    padding: 0%;
-    margin: 0%;
-    margin-top: -80px;
-}
-#h2Bienvenido{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-top: -50px;
-}
-#olvideContra{
-    margin-top: 100px;
-    text-decoration: none;
-    color: #007bff;
-    font-size:13px;
-}
-#inicia{
-    margin-top: 100px;
-    text-decoration: none;
-    color: #007bff;
-}
-#inicia:hover{
-    color: #0022ff;
-}
-* {
-    user-select: none;
-}
