--- a/estilos/estilosMenu.css
+++ b/estilos/estilosMenu.css
@@ -1,281 +1,103 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url("../images/bg.png");
+    background-image: url("../images/bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     overflow-x: hidden;
 }
 
-.container{
-    display: contents;
-}
-
 .header {
     width: 100%;
-   
-}
-    
-
-.container .btn-menu,
-.logo {
-    float: left;
-}
-
-.container .btn-menu label {
-    color: #fff;
-    font-size: 25px;
-    cursor: pointer;
-}
-
-.logo h1 {
-    color: #fff;
-    font-weight: 400;
-    font-size: 22px;
-    margin-left: 10px;
-}
-
-.container .menu {
-    line-height: 100px;
-}
-
-.container .menu a {
-    display: inline-block;
-    padding: 15px;
-    line-height: normal;
-    text-decoration: none;
-    color: #ffffff;
-    transition: all 0.3s ease;
-    border-bottom: 2px solid transparent;
-    font-size: 15px;
-    margin-right: 5px;
-}
-
-.container .menu a:hover {
-    border-bottom: 2px solid blue;
-    padding-bottom: 5px;
-}
-
-#btn-menu {
-    display: none;
-    color: #1c1c1c;
-}
-
-:root {
-    --color: #254ac7;
-    --hover: #3dc51b;
-}
-
-.btnAgregar {
-    cursor: pointer;
-    margin-left: 100px;
-    color: white;
-    background-color: rgba(0, 151, 249, 0.7819502801120448);
-    border: none;
-    padding: 10px;
-    border-radius: 2px;
-    box-shadow: 0.3em 0.3em 0 0 var(--color), inset 0.3em 0.3em 0 0 var(--color);
-}
-.menu {
-    position: relative;
-    display: inline-block;
-}
-
-#userMenuButton {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropdown-content {
-    display: none;
-
-    position: absolute;
-    background-color: #333;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 5;
-}
-
-.dropdown-content a {
-    color: white;
-    padding: 10px 14px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #555;
-}
-.dropdown-contents {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    box-shadow: 0 8px 16px rgb(0, 3, 207);
-    z-index: 5; 
-}
-
-
-.dropdown-contents a {
-    color: white;
-    padding: 10px 14px;
-    text-decoration: none;
-    display: block;
-    width: 100%; 
-    z-index: 10;
-}
-
-.dropdown-contents a:hover {
-    background-color: #555;
-    z-index: 10;
-}
-
-.btnAgregar:hover,
-.btnAgregar:focus {
-    transform: scale(1.1, 1.1);
-    transition: all;
-    box-shadow: inset 0 0 0 2em var(--hover);
-}
-
-#imgBar {
-    margin-top: 25px;
-    width: 50px;
-    height: 50px;
-}
-
-
-#btn-menu:checked~.container-menu {
-    opacity: 1 !important;
-    visibility: visible !important;
-    z-index: 1;
-}
-
-#imgClose {
-    margin: 10px;
-    width: 50px;
-    height: 50px;
-}
-
-#imgClose:hover {
-    transform: translateX(-20%);
-    transform: scale(1.3, 1.3);
-}
-
-.cont-menu {
-    width: 100%;
-    max-width: 300px;
-    height: 1000px;
-    border-bottom-right-radius: 30px;
-    position: fixed;
-    transition: all 500ms ease;
-    transform: translateX(-100%);
-}
-
-#btn-menu:checked~.container-menu .cont-menu {
-    transform: translateX(0%);
-}
-
-.cont-menu nav {
-    transform: translateY(15%);
-}
-
-.cont-menu nav a {
-    display: flex;
-    text-decoration: none;
-    padding: 20px;
-    color: #c7c7c7;
-    border-left: 5px solid transparent;
-    transition: all 400ms ease;
-}
-
-.cont-menu nav a:hover {
-    border-left: 5px solid #c7c7c7;
-    background: #fff7f7;
-    border-left: 5px solid blue;
-    color: black;
-    height: 70px;
-}
-
-.cont-menu label {
-    position: absolute;
-    color: #fff;
-    cursor: pointer;
-    font-size: 18px;
 }
 
 #logoInventarit {
-    width: 85%;
-    height: 40%;
+    width: 120px;
+    margin-right: 40px;
 }
-
-
 
 .menu {
-   
     background-color: #333;
     color: #fff;
-    width:min-content;
+    width: 100%;
     display: flex;
     align-items: center;
+    padding: 10px;
 }
 
-#imgCampana{
-    width: 30px;
-    height: 30px;
-}
-
-
+.menu h1 {
+    margin-right: 20px;
+} n
 
 .menu a {
     text-decoration: none;
     color: #fff;
-    margin: 0 10px;
+    margin-right: 20px;
+    transition: all 0.3s ease;
+}
+
+.menu a:hover {
+    color: #3dc51b;
 }
 
 .search {
-    align-items: center;
-    transition: transform 0.30s ease;
-}
-
-#searchInput {
-    width: 400px;
-    height: 30px;
-}
-
-.search:hover {
+    margin-left: auto;
     display: flex;
     align-items: center;
-    transform: scale(1.1);
-    border: transparent;
-    box-shadow: 0px 0px 10px blue;
+    width: 250px;
+    height: 40px;
+}
+.navbar-nav hr {
+    border-top: 1px solid rgb(255, 255, 255); 
+    margin: 8px 0; 
 }
 
-.notifications {
-    display: flex;
-    align-items: center;
-}
 
 .messages {
-    display: flex;
+    text-align: center;
     align-items: center;
+    justify-content: center;
+    position: relative;
+    margin-left: 5px;
+    margin-top: 8px;
 }
 
+.messages a {
 
-
-#imgLogout {
-    width: 40px;
-    height: 40px;
-    border-radius: 5px;
-}
-
-.user-menu a {
     text-decoration: none;
-    color: #0026ff;
+}
+
+#imgCampana {
+    max-height: 30px; 
+    width: auto; 
+    max-width: 100%;
+    height: auto; 
+    margin-left: 10px;
+}
+
+
+#userDropdown {
+    position: absolute !important;
+    top: 100%;
+    right: 0;
+    background-color: #333;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 10 !important;
+    display: none;
+}
+
+#userDropdown a {
+    color: white;
+    padding: 10px 14px;
+    text-decoration: none;
     display: block;
 }
 
-.user:hover .user-menu {
+#userDropdown a:hover {
+    background-color: #555;
+}
+
+.messages:hover #userDropdown {
     display: block;
 }
