--- a/estilos/estilosDispositivos.css
+++ b/estilos/estilosDispositivos.css
@@ -29,10 +29,13 @@ body {
         height: 100px;
     }
 
-    .headerTabla h1 {
+    .headerTabla  {
         font-size: 60px; /* Ajusta el tamaño del texto según tu preferencia */
-        color: #ffffff;
+        color: #000000;
     }
+
+  
+
 
 /* Agrega estos estilos para animar la entrada del elemento */
 .headerTabla.show {
@@ -51,6 +54,19 @@ body {
     height: 350px;
     margin-left: 100px;
 }
+@media screen and (max-width: 800px){
+    #IMGlaptop{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media screen and (max-height: 800px){
+    #IMGlaptop{
+        width: 100%;
+        height: 100%;
+    }
+}
 
 .input-group {
     margin: 5px;
@@ -59,55 +75,16 @@ body {
 .table {
     margin-top: 60px !important;
     width: 100% !important;
-     /* Centra la table */
-}
-
-.table th, .table td {
-    padding: 10px !important;
-    text-align: center !important;
-    font-size: 14px !important;
-}
-
-.thead-dark {
-    background-color: #333 !important;
-    color: #3fa9ff !important;
-} 
-
-.table tbody tr:nth-child(even) {
-    color: black !important;
-    background-color: #f9f9f9 !important;
+     
 }
 
 
 
 
-.table tbody tr:hover {
-    background: none !important;
-    background: linear-gradient(0deg, rgba(0,22,249,0.2553396358543417) 51%, rgba(0,151,249,0.7819502801120448) 100%) !important;
-    color: #ffffff !important;
-    transform: scale(1.05) !important; 
-    transition: transform 0.3s ease !important; 
-}
-
-.table tbody tr {
-    transition: transform 0.3s ease, box-shadow 0.3s ease !important; /* Agregado box-shadow a la transición */
-}
-
-.table tbody tr:hover {
-    transform: scale(1.05) !important;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5) !important; 
-}
 
 
-.table a {
-    display: inline-block !important;
-    margin: 5px !important;
-    padding: 5px 10px !important;
-    text-decoration: none !important;
-    color: #fff !important;
-    background-color: #333 !important;
-    border-radius: 5px !important;
-}
+
+
 
 .header.hidden-header {
     display: none !important;
@@ -175,4 +152,12 @@ body {
     color: #fff;
     border-color: #2980b9; /* Borde más oscuro al pasar el ratón */
 }
+
+@media screen and (max-height: 800px){
+    .custom-button{
+        width: 100%;
+        height: 100%;
+    }
+}
+
 
